--- a/postgres/docker-compose.yml
+++ b/postgres/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     restart: always
     environment:
       POSTGRES_PASSWORD: topSecret
+      POSTGRES_DB: quarkus
 
 volumes:
     postgres_db:
