--- a/kafka/docker-compose.yml
+++ b/kafka/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   zookeeper:
-    container_name: zoo
+    container_name: zookeeper
     image: wurstmeister/zookeeper
     ports:
       - "2181:2181"
@@ -19,7 +19,7 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,LISTENER_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_LOG_DIRS: /kafka1/logs
+      KAFKA_LOG_DIRS: /kafka/logs
       KAFKA_BROKER_ID: 600
       KAFKA_offsets_topic_replication_factor: 1
     volumes:
@@ -51,58 +51,21 @@ services:
     depends_on:
       - kafka-schema-registry
 
-version: "3"
 
-services:
-  zookeeper:
-    container_name: zoo
-    image: wurstmeister/zookeeper
-    ports:
-      - "2181:2181"
-
-  kafka1:
-    container_name: kafka1
-    image: wurstmeister/kafka
-    ports:
-      - "9092:9092"
-    environment:
-      # Had to call the internal docker listener PLAINTEXT so that schema registry works!!
-      #KAFKA_ADVERTISED_HOST_NAME: kafka1
-      #KAFKA_ADVERTISED_PORT: 9092
-      KAFKA_LISTENERS: PLAINTEXT://kafka1:29092, LISTENER_HOST://0.0.0.0:9092
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka1:29092, LISTENER_HOST://localhost:9092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,LISTENER_HOST:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_LOG_DIRS: /kafka1/logs
-      KAFKA_BROKER_ID: 600
-      KAFKA_offsets_topic_replication_factor: 1
-    volumes:
-    - //var/run/docker.sock:/var/run/docker.sock
-    - /c/docker-data/kafka/600:/kafka    
-
-  kafka-schema-registry:
-    image: confluentinc/cp-schema-registry
+  rest-proxy:
+    image: confluentinc/cp-kafka-rest:5.3.1
     depends_on:
-      - kafka1
       - zookeeper
-    environment:
-          SCHEMA_REGISTRY_HOST_NAME: kafka-schema-registry
-          SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL: zookeeper:2181
-          SCHEMA_REGISTRY_LISTENERS: http://0.0.0.0:8081
-    ports:
-      - "8081:8081"
-
-  schema-registry-ui:
-    image: landoop/schema-registry-ui
-    container_name: kafka-schema-registry-ui
-    hostname: kafka-schema-registry-ui
-    ports:
-      - "8001:8000"
-      # http://localhost:8001/#/
-    environment:
-      SCHEMAREGISTRY_URL: http://kafka-schema-registry:8081/
-      PROXY: "true"
-    depends_on:
+      - kafka1
       - kafka-schema-registry
+    ports:
+      - 8082:8082
+    hostname: rest-proxy
+    container_name: rest-proxy
+    environment:
+      KAFKA_REST_HOST_NAME: rest-proxy
+      KAFKA_REST_BOOTSTRAP_SERVERS: 'kafka1:29092'
+      KAFKA_REST_LISTENERS: "http://0.0.0.0:8082"
+      KAFKA_REST_SCHEMA_REGISTRY_URL: 'http://kafka-schema-registry:8081'
+
 
